Botones pueden seleccionarse uno a la vez

--- a/index.html
+++ b/index.html
@@ -136,41 +136,41 @@
             <div class="row">
                 <div class="language-list1 col-12 col-sm-6 col-md-4">
                     <ul>
-                        <li class="source-language" id="afr-s">Afrikaans</li>
-                        <li class="source-language"  id="amh-s">Amharic</li>
-                        <li class="source-language"  id="arc-s">Arabic</li>
-                        <li class="source-language"  id="arm-s">Armenian</li>
-                        <li class="source-language"  id="ind-s">Bahasa Indonesian</li>
-                        <li class="source-language"  id="bur-s">Burmese</li>
-                        <li class="source-language"  id="cam-s">Cambodian (Khmer)</li>
-                        <li class="source-language"  id="sch-s">Chinese (Simplified)</li>
-                        <li class="source-language"  id="tch-s">Chinese (Traditional)</li>
+                        <li class="source-language unselected" id="afr-s">Afrikaans</li>
+                        <li class="source-language unselected"  id="amh-s">Amharic</li>
+                        <li class="source-language unselected"  id="arc-s">Arabic</li>
+                        <li class="source-language unselected"  id="arm-s">Armenian</li>
+                        <li class="source-language unselected"  id="ind-s">Bahasa Indonesian</li>
+                        <li class="source-language unselected"  id="bur-s">Burmese</li>
+                        <li class="source-language unselected"  id="cam-s">Cambodian (Khmer)</li>
+                        <li class="source-language unselected"  id="sch-s">Chinese (Simplified)</li>
+                        <li class="source-language unselected"  id="tch-s">Chinese (Traditional)</li>
                     </ul>
                 </div>
                 <div class="language-list2 col-12 col-sm-6 col-md-4">
                     <ul>
-                        <li class="source-language" id="cro-s">Croatian</li>
-                        <li class="source-language" id="dar-s">Dari</li>
-                        <li class="source-language" id="dut-s">Dutch</li>
-                        <li class="source-language" id="eng-s">English</li>
-                        <li class="source-language" id="far-s">Farsi</li>
-                        <li class="source-language" id="freu-s">French</li>
-                        <li class="source-language" id="ger-s">German</li>
-                        <li class="source-language" id="hin-s">Hindi</li>
-                        <li class="source-language" id="ita-s">Italian</li>
+                        <li class="source-language unselected" id="cro-s">Croatian</li>
+                        <li class="source-language unselected" id="dar-s">Dari</li>
+                        <li class="source-language unselected" id="dut-s">Dutch</li>
+                        <li class="source-language unselected" id="eng-s">English</li>
+                        <li class="source-language unselected" id="far-s">Farsi</li>
+                        <li class="source-language unselected" id="freu-s">French</li>
+                        <li class="source-language unselected" id="ger-s">German</li>
+                        <li class="source-language unselected" id="hin-s">Hindi</li>
+                        <li class="source-language unselected" id="ita-s">Italian</li>
                     </ul>
                 </div>
                 <div class="language-list3 col-12 col-sm-12 col-md-4">
                     <ul>
-                        <li class="source-language" id="jpn-s">Japanese</li>
-                        <li class="source-language" id="kor-s">Korean</li>
-                        <li class="source-language" id="pas-s">Pashto</li>
-                        <li class="source-language" id="pol-s">Polish</li>
-                        <li class="source-language" id="port-s">Portuguese</li>
-                        <li class="source-language" id="rus-s">Russian</li>
-                        <li class="source-language" id="spa-s">Spanish</li>
-                        <li class="source-language" id="tag-s">Tagalog</li>
-                        <li class="source-language" id="viet-s">Vietnamese</li>
+                        <li class="source-language unselected" id="jpn-s">Japanese</li>
+                        <li class="source-language unselected" id="kor-s">Korean</li>
+                        <li class="source-language unselected" id="pas-s">Pashto</li>
+                        <li class="source-language unselected" id="pol-s">Polish</li>
+                        <li class="source-language unselected" id="port-s">Portuguese</li>
+                        <li class="source-language unselected" id="rus-s">Russian</li>
+                        <li class="source-language unselected" id="spa-s">Spanish</li>
+                        <li class="source-language unselected" id="tag-s">Tagalog</li>
+                        <li class="source-language unselected" id="viet-s">Vietnamese</li>
                     </ul>
                 </div>
             </div>
@@ -180,50 +180,51 @@
             <div class="row">
                 <div class="language-list1 col-12 col-sm-6 col-md-4">
                     <ul>
-                        <li class="target-language" id="afr-t">Afrikaans</li>
-                        <li class="target-language" id="amh-t">Amharic</li>
-                        <li class="target-language" id="arc-t">Arabic</li>
-                        <li class="target-language" id="arm-t">Armenian</li>
-                        <li class="target-language" id="ind-t">Bahasa Indonesian</li>
-                        <li class="target-language" id="bur-t">Burmese</li>
-                        <li class="target-language" id="cam-t">Cambodian (Khmer)</li>
-                        <li class="target-language" id="sch-t">Chinese (Simplified)</li>
-                        <li class="target-language" id="tch-t">Chinese (Traditional)</li>
+                        <li class="target-language unselected" id="afr-t">Afrikaans</li>
+                        <li class="target-language unselected" id="amh-t">Amharic</li>
+                        <li class="target-language unselected" id="arc-t">Arabic</li>
+                        <li class="target-language unselected" id="arm-t">Armenian</li>
+                        <li class="target-language unselected" id="ind-t">Bahasa Indonesian</li>
+                        <li class="target-language unselected" id="bur-t">Burmese</li>
+                        <li class="target-language unselected" id="cam-t">Cambodian (Khmer)</li>
+                        <li class="target-language unselected" id="sch-t">Chinese (Simplified)</li>
+                        <li class="target-language unselected" id="tch-t">Chinese (Traditional)</li>
                     </ul>
                 </div>
                 <div class="language-list2 col-12 col-sm-6 col-md-4">
                     <ul>
-                        <li class="target-language" id="cro-t">Croatian</li>
-                        <li class="target-language" id="dar-t">Dari</li>
-                        <li class="target-language" id="dut-t">Dutch</li>
-                        <li class="target-language" id="eng-t">English</li>
-                        <li class="target-language" id="far-t">Farsi</li>
-                        <li class="target-language" id="freu-t">French</li>
-                        <li class="target-language" id="ger-t">German</li>
-                        <li class="target-language" id="hin-t">Hindi</li>
-                        <li class="target-language" id="ita-t">Italian</li>
+                        <li class="target-language unselected" id="cro-t">Croatian</li>
+                        <li class="target-language unselected" id="dar-t">Dari</li>
+                        <li class="target-language unselected" id="dut-t">Dutch</li>
+                        <li class="target-language unselected" id="eng-t">English</li>
+                        <li class="target-language unselected" id="far-t">Farsi</li>
+                        <li class="target-language unselected" id="freu-t">French</li>
+                        <li class="target-language unselected" id="ger-t">German</li>
+                        <li class="target-language unselected" id="hin-t">Hindi</li>
+                        <li class="target-language unselected" id="ita-t">Italian</li>
                     </ul>
                 </div>
                 <div class="language-list3 col-12 col-sm-12 col-md-4">
                     <ul>
-                        <li class="target-language" id="jpn-t">Japanese</li>
-                        <li class="target-language" id="kor-t">Korean</li>
-                        <li class="target-language" id="pas-t">Pashto</li>
-                        <li class="target-language" id="pol-t">Polish</li>
-                        <li class="target-language" id="port-t">Portuguese</li>
-                        <li class="target-language" id="rus-t">Russian</li>
-                        <li class="target-language" id="spa-t">Spanish</li>
-                        <li class="target-language" id="tag-t">Tagalog</li>
-                        <li class="target-language" id="viet-t">Vietnamese</li>
+                        <li class="target-language unselected" id="jpn-t">Japanese</li>
+                        <li class="target-language unselected" id="kor-t">Korean</li>
+                        <li class="target-language unselected" id="pas-t">Pashto</li>
+                        <li class="target-language unselected" id="pol-t">Polish</li>
+                        <li class="target-language unselected" id="port-t">Portuguese</li>
+                        <li class="target-language unselected" id="rus-t">Russian</li>
+                        <li class="target-language unselected" id="spa-t">Spanish</li>
+                        <li class="target-language unselected" id="tag-t">Tagalog</li>
+                        <li class="target-language unselected" id="viet-t">Vietnamese</li>
                     </ul>
                 </div>
             </div>
         </div>
+        <div class="cart"></div>
         <div class="turnaround">
             <strong>How soon would you need to receive the translation(s)?</strong>
             <div class="turnaround-responses">
-                <p id="asap">As soon as possible</p>
-                <p id="notrush">I'm not in a rush</p>
+                <p id="asap" class="unselected">As soon as possible</p>
+                <p id="notrush" class="unselected">I'm not in a rush</p>
             </div>
         </div>
         <div class="submit">
