--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
             </div>
         </div>
-        <div class="cart"></div>
+        <div id="cart"></div>
         <div class="turnaround">
             <strong>How soon would you need to receive the translation(s)?</strong>
             <div class="turnaround-responses">
