--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- Fin del título de la página -->
 
     <!--Automatic quote tool -->
-    <div class="tool container">
+    <div class="tool container" id="tool">
         <h2>Automatic Quote</h2>
         <div id="main-section">
             <strong>Upload your file below. Our tool will analyze it and provide a quote based on the word count and
@@ -235,6 +235,26 @@
         </div>
         <div id="results"></div>
     </div>
+
+    <!-- MODAL -->
+    <div class="modal" tabindex="-1" role="dialog" id="modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Error</h5>
+                <button type="button" id="close-button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p id="modal-body">Error. Please ensure you have selected a file, source language, target language, turnaround and wordcount.</p>
+            </div>
+            <div class="modal-footer">
+                <button id="go-back-button" type="button" class="btn btn-primary">Go back</button>
+            </div>
+            </div>
+        </div>
+        </div>
 
     <!-- Comienzo del footer -->
     <section id="footer">
