--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div id="main-section">
             <strong>Upload your file below. Our tool will analyze it and provide a quote based on the word count and
                 details provided. NOTE: If you are going to select multiple language pairs, please select one at a
-                time.</strong>
+                time and click on "Add language pair" upon selecting each one.</strong>
             <div class="upload">
                 <button class="upload-file">
                     <form action="/action_page.php">
