File name en storage continúa viéndose a pesar de actualizarse

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                 details provided. NOTE: If you are going to select multiple language pairs, please select one at a
                 time and click on "Add language pair" upon selecting each one.</strong>
             <div class="upload">
-                <button class="upload-file">
-                    <form action="/action_page.php">
-                        <input type="file" id="myFile" multiple>
+                <div id="upload-file">
+                    <form action="/action_page.php" id="upload-file-form">
+                        <input type="file" id="myFile">
                     </form>
-                </button>
+                </div>
             </div>
             <div class="wordcount">
                 <strong>Please insert the total word count of your files.</strong>
