--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                 </div>
             </div>
             <div id="cart"></div>
+            <p class="note">Note: Please make sure to click on "Add language pair" even if you have selected only one language pair.</p>
             <div class="turnaround">
                 <strong>How soon would you need to receive the translation(s)?</strong>
                 <div class="turnaround-responses">
