--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p id="modal-body">Error. Please ensure you have selected a file, source language, target language, turnaround and wordcount.</p>
+                <p id="modal-body">Error. Please ensure you have selected a file, source language, target language, turnaround and wordcount. If you have already selected a source and a target language, don't forget to click on the 'Add language pair' button.</p>
             </div>
             <div class="modal-footer">
                 <button id="go-back-button" type="button" class="btn btn-primary">Go back</button>
