--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <strong>Please select the source language.</strong>
                 <div class="row">
                     <div class="language-list1 col-12 col-sm-6 col-md-4">
-                        <ul>
+                        <ul id="list-source">
                             <li class="source-language unselected" id="afr-s">Afrikaans</li>
                             <li class="source-language unselected" id="amh-s">Amharic</li>
                             <li class="source-language unselected" id="arc-s">Arabic</li>
@@ -155,10 +155,6 @@
                             <li class="source-language unselected" id="cam-s">Cambodian (Khmer)</li>
                             <li class="source-language unselected" id="sch-s">Chinese (Simplified)</li>
                             <li class="source-language unselected" id="tch-s">Chinese (Traditional)</li>
-                        </ul>
-                    </div>
-                    <div class="language-list2 col-12 col-sm-6 col-md-4">
-                        <ul>
                             <li class="source-language unselected" id="cro-s">Croatian</li>
                             <li class="source-language unselected" id="dar-s">Dari</li>
                             <li class="source-language unselected" id="dut-s">Dutch</li>
@@ -168,10 +164,6 @@
                             <li class="source-language unselected" id="ger-s">German</li>
                             <li class="source-language unselected" id="hin-s">Hindi</li>
                             <li class="source-language unselected" id="ita-s">Italian</li>
-                        </ul>
-                    </div>
-                    <div class="language-list3 col-12 col-sm-12 col-md-4">
-                        <ul>
                             <li class="source-language unselected" id="jpn-s">Japanese</li>
                             <li class="source-language unselected" id="kor-s">Korean</li>
                             <li class="source-language unselected" id="pas-s">Pashto</li>
@@ -189,7 +181,7 @@
                 <strong>Which language(s) do you need your document translated into?</strong>
                 <div class="row">
                     <div class="language-list1 col-12 col-sm-6 col-md-4">
-                        <ul>
+                        <ul id="list-target">
                             <li class="target-language unselected" id="afr-t">Afrikaans</li>
                             <li class="target-language unselected" id="amh-t">Amharic</li>
                             <li class="target-language unselected" id="arc-t">Arabic</li>
@@ -199,10 +191,6 @@
                             <li class="target-language unselected" id="cam-t">Cambodian (Khmer)</li>
                             <li class="target-language unselected" id="sch-t">Chinese (Simplified)</li>
                             <li class="target-language unselected" id="tch-t">Chinese (Traditional)</li>
-                        </ul>
-                    </div>
-                    <div class="language-list2 col-12 col-sm-6 col-md-4">
-                        <ul>
                             <li class="target-language unselected" id="cro-t">Croatian</li>
                             <li class="target-language unselected" id="dar-t">Dari</li>
                             <li class="target-language unselected" id="dut-t">Dutch</li>
@@ -212,10 +200,6 @@
                             <li class="target-language unselected" id="ger-t">German</li>
                             <li class="target-language unselected" id="hin-t">Hindi</li>
                             <li class="target-language unselected" id="ita-t">Italian</li>
-                        </ul>
-                    </div>
-                    <div class="language-list3 col-12 col-sm-12 col-md-4">
-                        <ul>
                             <li class="target-language unselected" id="jpn-t">Japanese</li>
                             <li class="target-language unselected" id="kor-t">Korean</li>
                             <li class="target-language unselected" id="pas-t">Pashto</li>
